--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,7 +5,9 @@
     gap: 35px;
 }
 .hero img{
-    margin-top: 80px;
+    margin-top: 20px;
+    width: 350px;
+    height: auto;
 }
  
 .hero h1{
@@ -20,4 +22,39 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
+}
+.hero p{
+    width: 50%;
+    text-align: center;
+    font-size: 24px;
+    line-height: 40px;
+
+}
+.hero-action{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 5px;
+
+}
+.hero-connect{
+    padding: 25px 45px;
+    border-radius: 50px;
+    background: linear-gradient(264deg, #DF8908 -5.09%, #B415ff 100%);
+    cursor: pointer;
+}
+.hero-resume{
+    padding: 25px 75px;
+    border-radius: 50px;
+    border: 2px solid #fff;
+    cursor: pointer;
+
+}
+.hero-connect:hover{
+    border: 2px solid white;
+}
+.hero-resume:hover{
+    border-color: #B415ff;
 }
