--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,60 +1,89 @@
 .hero{
+     background-color: #111827;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 35px;
+    gap: 10px;
+    margin-bottom: 5rem;
+   
 }
-.hero img{
-    margin-top: 20px;
-    width: 350px;
-    height: auto;
+.hero-image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hero-image-container {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid #a855f7; /* cute purple ring */
+  box-shadow: 0 0 25px rgba(168, 85, 247, 0.3);
+  margin-bottom: 1.5rem;
+  transition: transform 0.3s ease;
 }
  
 .hero h1{
     text-align: center;
     width: 50%;
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 600;
 }
-.hero h1 span{
-    background: linear-gradient(270deg, #DF8908 10%, #B415ff 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.hero-name{
+   
+    color: #fff;
+    text-shadow: 0 0 5px;
+    
+
+}
+.hero-role{
+    
+    font-size: 25px;
+    color: #bdbcbc;
 
 }
 .hero p{
     width: 50%;
     text-align: center;
-    font-size: 24px;
-    line-height: 40px;
+    font-size: 20px;
+    line-height: 25px;
 
 }
 .hero-action{
     display: flex;
     align-items: center;
     gap: 25px;
-    font-size: 24px;
+    font-size: 15px;
     font-weight: 500;
     margin-bottom: 5px;
+    margin-top: 5px;
 
 }
 .hero-connect{
-    padding: 25px 45px;
+    padding: 15px 40px;
     border-radius: 50px;
-    background: linear-gradient(264deg, #DF8908 -5.09%, #B415ff 100%);
+    background: linear-gradient(to right, #00f0ff, #b415ff);
     cursor: pointer;
 }
 .hero-resume{
-    padding: 25px 75px;
+    padding: 15px 40px;
     border-radius: 50px;
     border: 2px solid #fff;
     cursor: pointer;
 
+}
+.hero-resume a{
+    text-decoration: none;
+    color: #fff;
 }
 .hero-connect:hover{
     border: 2px solid white;
 }
 .hero-resume:hover{
     border-color: #B415ff;
+}
+.hero-para{
+    font-size: 10px;
+    color: #bdbcbc;
+
 }
