Your awesome commit message here

--- a/src/components/Navbar/Navigationbar.css
+++ b/src/components/Navbar/Navigationbar.css
@@ -4,8 +4,8 @@
     align-items: center;
     
     height: 80px;
-    padding: 0 40px;
-    background-color: #111827;
+    padding: 0 20px;
+    background-color: #282C33;
 
 
 }
