--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,7 @@
 .about-main{
-background-color:#121212;
-border: 1px solid #0c0909;
+padding-top: 5rem;
+background-color:#282C33;
+
 
 }
 .about{
@@ -8,33 +9,30 @@ border: 1px solid #0c0909;
     flex-direction: column; 
     justify-content: center;
     gap: 80px;
-    margin: 80px 170px;
+    margin: 0px 170px;
 
 }
 .about-title{
- font-size: 2.5rem;
+  font-size: 2.5rem;
   margin-bottom: 40px;
-  text-shadow: 0 0 15px #00f0ff;
-  text-align: center;
+  
+}
+.about-header{
+  font-size: 2rem;
+  color: #fff;
 
 }
 
-.section-divider {
-  border: none;
-  height: 2px;
-  background: linear-gradient(to right, #00ffff, #ff00ff);
-  margin-top: 10px;
-  margin-bottom: 4rem;
-  opacity: 0.6;
-  width: 10%;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .about-left img{
-    width: 300px; 
-    height: 400px; 
-    object-fit: cover; 
+
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: relative;
+  z-index: 1;
+  margin-top: 3rem;
 
   }
   .about-sections{
@@ -52,13 +50,13 @@ border: 1px solid #0c0909;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    font-size: 20px;
-    color: #bdbcbc;
+    font-size: 1.2rem;
+    color: #ccc;
     
 
   } 
   
-  .about-achievements{
+  /* .about-achievements{
    display:flex;
     gap: 20px;
   }
@@ -82,7 +80,29 @@ border: 1px solid #0c0909;
     font-weight: 500;
     color: #bdbcbc;
     text-align: center;
-  }
+  } */
+
+/* .about-achievements {
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid #a24bf3;
+  border-radius: 12px;
+  padding: 1rem;
+  margin-top: 2rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.achievement h3 {
+  color: #a855f7;
+  margin: 0;
+}
+
+.achievement p {
+  margin: 0.2rem 0 0 0;
+  font-size: 0.9rem;
+  color: #fff;
+} */
+
   .about-skill:hover{
     transform: scale(1.12);
     transition: 0.3s;
@@ -92,4 +112,42 @@ border: 1px solid #0c0909;
     transition: 0.5s;
 
   }
+
+  .about-left {
+  position: relative; /* so shapes are positioned relative to container */
+}
+
+.circle-shape {
+  position: absolute;
+  top: 30px;
+  left: -20px;
+  width: 80px;
+  height: 80px;
+  border: 2px solid #a24bf3;
+  /* border-radius: 50%; */
+  /* opacity: 0.3; */
+  z-index: 0;
+}
+
+.see-more-btn {
+  margin-top: 1rem;
+  background-color: #282C33;
+  color: #a24bf3;
+  
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 0.9rem;
+  transition: background-color 0.3s ease;
+  width: 8rem;
+  border: 2px solid #a048f1;
+}
+
+.see-more-btn:hover {
+  background-color: #9333ea;
+  color: #fff;
+}
+
+
 
